# engine

./: .gitignore  .npmignore  CLAUDE.md  LICENSE  README.md  Surreal_Engine_Spec_v01.md  bloom-renderer-spec-v2.md  bloom-renderer-spec.md  package.json
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: release.yml  test.yml
docs/: crash-triage-windows.md  design-api.md  ios-target.md  migration-0.5.md  physics.md  skeletal-animation.md  tickets.md  watchos-target.md  web-target.md  world-format.md
docs/perf/: 001-tsr-half-res.md  002-compute-gtao.md  003-stochastic-ssr.md  004-cached-shadow-maps.md  005-depth-prepass.md  006-shadow-pass-culling.md  007-lumen-style-ssgi.md  007-prep-wgpu-upgrade.md  007a-lumen-screen-probes-sw.md  007b-lumen-screen-probes-hw.md  008-visibility-buffer.md  009-gpu-driven-rendering.md  010-async-compute.md  011-cross-platform-ffi.md  012-remaining-bind-group-caches.md  013-lumen-surface-cache.md  014-lumen-mesh-sdfs.md  016-lumen-importance-sampling.md  017-lumen-cleanup-and-protocol-gaps.md  README.md  lumen-roadmap.md
docs/pt/: PT-1-progressive-megakernel.md  PT-2-real-hit-shading.md  PT-3b-svgf-denoiser.md  PT-5-integration-and-restir.md  PT-6-7-8-skinned-tlas-motion-oracle.md  pt-roadmap.md
docs/rfc/: 0001-material-render-graph.md  0002-atmospheric-sky.md
embed-perry/: .gitignore  README.md  build-windows.sh  package.json
embed-perry/src/: main.ts
examples/bistro/: main.ts  package.json
examples/dungeon-crawl/: main.ts  package.json
examples/intel-sponza/: main.ts  package.json
examples/isometric-rpg/: main.ts  package.json
examples/kart-racer/: main.ts  package.json
examples/pbr-spheres/: main.ts  package.json
examples/perry-embed/: README.md  main.ts  package.json
examples/pong/: main.ts  package-lock.json  package.json
examples/renderer-test/: main.ts  package.json
examples/scene-graph/: interactive.ts  main.ts  r3f-bridge.ts  room.ts  shadows.ts
examples/space-blaster/: main.ts  package.json
examples/sponza/: main.ts
examples/test-gltf-watch/: main.ts  package.json
examples/test-scene-watch/: main.ts  package.json
examples/test3d/: main.ts  package.json
examples/voxel-sandbox/: main.ts  package.json
examples/world-viewer/: README.md  main.ts  package.json
native/android/: Cargo.toml
native/android/src/: lib.rs
native/ios/: Cargo.toml
native/ios/src/: lib.rs
native/linux/: Cargo.toml  bundle-jolt.sh
native/linux/src/: lib.rs
native/macos/: Cargo.toml
native/macos/src/: lib.rs
native/shared/: Cargo.toml  build.rs
native/shared/examples/: probe_compose.rs
native/shared/shaders/: impulse_field.wgsl  material_abi.wgsl
native/shared/shaders/common/: clouds.wgsl  fog.wgsl  foliage_wind.wgsl  imposter.wgsl  pbr.wgsl  shadows.wgsl  sky.wgsl  tonemap.wgsl
native/shared/shaders/materials/: test_minimal.wgsl
native/shared/src/: anim_mixer.rs  attach.rs  audio.rs  custom_shaders.rs  decals.rs  drs.rs  engine.rs  ffi.rs  ffi_core.rs  frame_callbacks.rs  geometry.rs  handles.rs  input.rs  jolt_sys.rs  lib.rs  models.rs  models_gltf.rs  particles.rs  physics.rs  physics_jolt.rs  picking.rs  postfx.rs  profiler.rs  ragdoll.rs  renderer.rs  scene.rs  sdf_cache.rs  shadows.rs  staging.rs  string_header.rs  text_renderer.rs  textures.rs
native/shared/src/audio/: decode.rs  mod.rs  render.rs  spsc.rs  stream.rs
native/shared/src/ffi_core/: assets.rs  audio_ffi.rs  draw.rs  game_loop.rs  input.rs  mod.rs  models.rs  ragdoll_ffi.rs  scene.rs  vfx.rs  visual.rs
native/shared/src/renderer/: atmosphere_lut.rs  brdf_lut.rs  draw2d.rs  formats.rs  froxel.rs  gi_bake.rs  graph.rs  hiz.rs  hot_reload.rs  impulse_field.rs  lighting.rs  material_instancing.rs  material_pipeline.rs  material_system.rs  material_system_tests.rs  material_system_wasm.rs  mod.rs  model_draw.rs  occlusion.rs  planar_pass.rs  planar_reflection.rs  post_pass.rs  postfx_chain.rs  pt_pass.rs  scene_pass.rs  shader_include.rs  shader_library.rs  shaders.rs  shadow_pass.rs  ssgi_pass.rs  ssr_pass.rs  texture_store.rs  transient.rs  types.rs  util.rs
native/shared/src/renderer/shaders/: ao.rs  core.rs  env.rs  gi.rs  mod.rs  post.rs  pt.rs  ssgi.rs
native/shared/tests/: golden_render.rs  render_targets.rs
native/shared/tests/fixtures/: quadrants_bc7.dds
native/tvos/: Cargo.toml
native/tvos/metal-patched/src/: device.rs
native/tvos/src/: audio_backend.rs  lib.rs
native/visionos/: Cargo.toml
native/visionos/src/: lib.rs
native/watchos/: Cargo.toml  README.md  gen_stubs.js
native/watchos/shaders/: bloom_postfx.metal
native/watchos/src/: BloomWatchApp.swift  BloomWatchAudio.swift  audio.rs  draw_list.rs  ffi_stubs.rs  ffi_stubs_manual.rs  lib.rs  models.rs  postfx.rs  scene.rs  textures.rs
native/web/: Cargo.toml  bloom_glue.js  build.sh  index.html  jolt_bridge.js  splice_game.py
native/web/src/: input_ffi.rs  lib.rs  material_ffi.rs  parity_ffi.rs  physics_ffi.rs  ragdoll_ffi.rs  render_settings.rs
native/windows/: Cargo.toml
native/windows/src/: lib.rs
npm/engine-prebuilt/: README.md  package.json
npm/jolt-prebuilt/: README.md  package.json
scripts/: bundle-engine-prebuilt.sh  ci-check.sh  export_mixamo_glb.py  prepack.sh
src/: index.ts
src/audio/: index.ts
src/core/: colors.ts  index.ts  keys.ts  types.ts
src/math/: index.ts
src/mobile/: index.ts
src/models/: index.ts
src/physics/: index.ts
src/scene/: index.ts
src/shapes/: index.ts
src/text/: index.ts
src/textures/: index.ts
src/vfx/: index.ts
src/world/: index.ts  (+9 more)
tools/: README.md  build-materials-from-json.ts  check-file-lines.js  detect-corruption.sh  fetch-dxc.ps1  file-lines-baseline.json  taa-repro.sh  validate-ffi.js  validate.sh
tools/bloom-cook/: Cargo.toml  main.rs
tools/bloom-diff/: Cargo.toml
tools/bloom-diff/src/: main.rs
tools/bloom-reference/: Cargo.toml
tools/bloom-reference/examples/: check_tangents.rs
tools/bloom-reference/src/: main.rs  tracer.rs
tools/imposter-baker/: Cargo.toml
tools/imposter-baker/src/: gltf_load.rs  main.rs  octahedral.rs  render.rs
(+7 files in other folders)
