[package]
name = "bloom-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloom_android"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["jolt"]
jolt = ["bloom-shared/jolt"]

[dependencies]
bloom-shared = { path = "../shared", default-features = false, features = ["mp3"] }
raw-window-handle = "0.6"
wgpu = "29"
libc = "0.2"
ndk = "0.9"
oboe = "0.6"
