[package]
name = "bloom-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloom_android"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["jolt", "models3d", "image-extras"]
jolt = ["bloom-shared/jolt"]
# EN-014 — see native/shared/Cargo.toml. Default-on so existing games are
# unaffected; pure-2D games opt out via Perry feature forwarding.
models3d = ["bloom-shared/models3d"]
image-extras = ["bloom-shared/image-extras"]

[dependencies]
bloom-shared = { path = "../shared", default-features = false, features = ["mp3"] }
raw-window-handle = "0.6"
wgpu = "29"
libc = "0.2"
ndk = "0.9"
oboe = "0.6"
