[package]
name = "bloom-ios"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloom_ios"
crate-type = ["staticlib"]

[features]
default = ["jolt", "models3d", "image-extras"]
jolt = ["bloom-shared/jolt"]
# EN-014 — see native/shared/Cargo.toml. Default-on so existing games are
# unaffected; pure-2D games opt out via Perry feature forwarding.
models3d = ["bloom-shared/models3d"]
image-extras = ["bloom-shared/image-extras"]

# Match perry-runtime's panic strategy so the final perry-driven link
# doesn't see two copies of rust_eh_personality (and friends) from two
# independent Rust staticlibs. ld64.lld flags these as duplicate symbols;
# GNU ld silently tolerates them, which is why only Apple targets break.
# Mirrors the same setting in native/watchos/Cargo.toml.
[profile.release]
panic = "abort"

[dependencies]
image = { version = "0.25", default-features = false, features = ["hdr"] }
bloom-shared = { path = "../shared", default-features = false, features = ["mp3"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDate", "NSRunLoop", "NSString", "NSThread", "NSObject", "NSLocale", "NSArray"] }
raw-window-handle = "0.6"
wgpu = "29"
