[package]
name = "bloom-linux"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloom_linux"
crate-type = ["staticlib"]

[features]
default = ["jolt"]
jolt = ["bloom-shared/jolt"]

[dependencies]
bloom-shared = { path = "../shared", default-features = false, features = ["mp3"] }
image = { version = "0.25", default-features = false, features = ["hdr", "png", "jpeg"] }
raw-window-handle = "0.6"
wgpu = "29"
libc = "0.2"
arboard = "3"
rfd = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2"
alsa = "0.9"
