[package]
name = "bloom-linux"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloom_linux"
crate-type = ["staticlib"]

[features]
default = ["jolt", "models3d", "image-extras"]
jolt = ["bloom-shared/jolt"]
# EN-014 — see native/shared/Cargo.toml. Default-on so existing games are
# unaffected; pure-2D games opt out via Perry feature forwarding.
models3d = ["bloom-shared/models3d"]
image-extras = ["bloom-shared/image-extras"]

[dependencies]
bloom-shared = { path = "../shared", default-features = false, features = ["mp3"] }
image = { version = "0.25", default-features = false, features = ["hdr", "png", "jpeg"] }
raw-window-handle = "0.6"
wgpu = "29"
libc = "0.2"
arboard = "3"
rfd = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2"
alsa = "0.9"
