[package]
name = "bloom-macos"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloom_macos"
crate-type = ["staticlib"]

[features]
# Jolt physics is enabled by default because Perry's native-library build
# pipeline does not forward cargo feature flags to nativeLibrary crates —
# any game importing `bloom/physics` would otherwise fail to link. The
# tradeoff is ~60s extra cold-build time for games that don't use physics.
default = ["jolt"]
jolt = ["bloom-shared/jolt"]

# Match perry-runtime's panic strategy so the final perry-driven link
# doesn't see two copies of rust_eh_personality (and friends) from two
# independent Rust staticlibs. ld64.lld flags these as duplicate symbols;
# GNU ld silently tolerates them, which is why only Apple targets break.
# Mirrors the same setting in native/watchos/Cargo.toml.
[profile.release]
panic = "abort"

[dependencies]
bloom-shared = { path = "../shared", default-features = false, features = ["mp3"] }
image = { version = "0.25", default-features = false, features = ["hdr"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDate", "NSRunLoop", "NSString", "NSThread", "NSLocale", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSEvent", "NSApplication", "NSScreen", "NSGraphicsContext", "NSRunningApplication", "NSResponder"] }
objc2-quartz-core = { version = "0.3", features = ["CAMetalLayer"] }
raw-window-handle = "0.6"
wgpu = "29"
libc = "0.2"
rfd = "0.15"
arboard = "3"
