[package]
name = "bloom-macos"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloom_macos"
crate-type = ["staticlib"]

[features]
# Everything defaults ON so existing games are unaffected. Pure-2D games
# opt out per-project via Perry's `[native-library."<pkg>"]` feature
# forwarding in perry.toml (perry >= 0.5.1126), e.g.:
#   [native-library."@bloomengine/engine"]
#   default-features = false
# which drops Jolt, glTF/DDS model loading, and the non-PNG image codecs
# from the game binary.
default = ["jolt", "models3d", "image-extras"]
jolt = ["bloom-shared/jolt"]
# EN-014 — glTF/DDS model loading + ModelManager (and this crate's
# bloom_load_model/draw_model/... FFI surface).
models3d = ["bloom-shared/models3d"]
# EN-014 — image codecs beyond PNG; also gates this crate's own HDR
# env-map decode (bloom_set_env_clear_from_hdr).
image-extras = ["bloom-shared/image-extras", "image/hdr"]

# Match perry-runtime's panic strategy so the final perry-driven link
# doesn't see two copies of rust_eh_personality (and friends) from two
# independent Rust staticlibs. ld64.lld flags these as duplicate symbols;
# GNU ld silently tolerates them, which is why only Apple targets break.
# Mirrors the same setting in native/watchos/Cargo.toml.
[profile.release]
panic = "abort"

[dependencies]
bloom-shared = { path = "../shared", default-features = false, features = ["mp3"] }
image = { version = "0.25", default-features = false }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDate", "NSRunLoop", "NSString", "NSThread", "NSLocale", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSEvent", "NSApplication", "NSScreen", "NSGraphicsContext", "NSRunningApplication", "NSResponder"] }
objc2-quartz-core = { version = "0.3", features = ["CAMetalLayer"] }
raw-window-handle = "0.6"
wgpu = "29"
libc = "0.2"
rfd = "0.15"
arboard = "3"
