[package]
name = "bloom-shared"
version = "0.1.0"
edition = "2021"

[features]
default = ["mp3", "physics"]
mp3 = ["dep:minimp3"]
physics = ["dep:rapier3d"]
web = ["dep:web-time"]

[dependencies]
wgpu = "24"
raw-window-handle = "0.6"
fontdue = "0.9"
libc = "0.2"
bytemuck = { version = "1", features = ["derive"] }
half = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga", "hdr"] }
gltf = "1"
lewton = "0.10"
minimp3 = { version = "0.5", optional = true }
earcutr = "0.4"
rapier3d = { version = "0.32", optional = true }
web-time = { version = "0.2", optional = true }
