[package]
name = "bloom-shared"
version = "0.1.0"
edition = "2021"

[features]
default = ["mp3", "jolt", "hot-reload"]
mp3 = ["dep:minimp3"]
jolt = []
# EN-008 — gate the `notify` filesystem watcher behind a compile-time
# feature. Default-on for the dev workflow; ship game binaries with
# --no-default-features (or --features mp3,jolt) to drop notify from
# the dep tree entirely.
hot-reload = ["dep:notify"]
web = ["dep:web-time"]

[build-dependencies]
cmake = "0.1"

[dependencies]
wgpu = "29"
raw-window-handle = "0.6"
fontdue = "0.9"
libc = "0.2"
bytemuck = { version = "1", features = ["derive"] }
half = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga", "hdr"] }
image_dds = { version = "0.7", default-features = false, features = ["ddsfile", "image"] }
gltf = { version = "1", features = ["KHR_materials_pbrSpecularGlossiness", "KHR_materials_transmission"] }
lewton = "0.10"
minimp3 = { version = "0.5", optional = true }
earcutr = "0.4"
web-time = { version = "0.2", optional = true }
# Phase 6 — hot-reload watcher for material WGSL files. Native only;
# wasm doesn't have a filesystem to watch (gated in code via
# cfg(not(target_arch = "wasm32"))). EN-008 made it opt-in via the
# `hot-reload` cargo feature so shipped game builds can drop notify.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = { version = "6", optional = true }

[dev-dependencies]
pollster = "0.4"
