[package]
name = "bloom-shared"
version = "0.1.0"
edition = "2021"

[features]
default = ["mp3", "jolt", "hot-reload", "models3d", "image-extras"]
mp3 = ["dep:minimp3"]
jolt = []
# EN-008 — gate the `notify` filesystem watcher behind a compile-time
# feature. Default-on for the dev workflow; ship game binaries with
# --no-default-features (or --features mp3,jolt) to drop notify from
# the dep tree entirely.
hot-reload = ["dep:notify"]
web = ["dep:web-time"]
# EN-014 — 3D model loading (glTF + DDS) and the ModelManager. Pure-2D
# games disable this via Perry's `[native-library."<pkg>"]` feature
# forwarding to drop gltf/gltf_json/image_dds from the binary entirely.
# Default-on so existing 3D games are unaffected.
models3d = ["dep:gltf", "dep:image_dds"]
# EN-014 — image codecs beyond PNG. `image::load_from_memory` is
# format-agnostic, so disabling this only changes which file formats
# decode at runtime; PNG always works.
# image_dds rides along: cooked BC7 .dds textures are "image formats
# beyond PNG" in the same sense as jpeg/bmp/tga (decode-only here; the
# encoder lives in tools/bloom-cook).
image-extras = ["image/jpeg", "image/bmp", "image/tga", "image/hdr", "dep:image_dds"]

[build-dependencies]
cmake = "0.1"

[dependencies]
wgpu = "29"
raw-window-handle = "0.6"
fontdue = "0.9"
libc = "0.2"
bytemuck = { version = "1", features = ["derive"] }
half = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
image_dds = { version = "0.7", default-features = false, features = ["ddsfile", "image"], optional = true }
gltf = { version = "1", features = ["KHR_materials_pbrSpecularGlossiness", "KHR_materials_transmission"], optional = true }
lewton = "0.10"
minimp3 = { version = "0.5", optional = true }
earcutr = "0.4"
web-time = { version = "0.2", optional = true }
# Phase 6 — hot-reload watcher for material WGSL files. Native only;
# wasm doesn't have a filesystem to watch (gated in code via
# cfg(not(target_arch = "wasm32"))). EN-008 made it opt-in via the
# `hot-reload` cargo feature so shipped game builds can drop notify.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = { version = "6", optional = true }

# EN-063 — the engine's error channel on web. `log_error`'s eprintln! is a
# black hole in a browser (no stderr), so every engine warning and error —
# missing texture-array layers, surface-acquire failures, feature-off
# warnings — was silently dropped on the one platform whose users can't
# attach a debugger. Route them to console.error instead.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
pollster = "0.4"
