[package]
name = "bloom-watchos"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloom_watchos"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"

# Match perry-runtime's panic strategy so -Zbuild-std=std,panic_abort produces
# bit-identical std rlibs that dedupe at link time. Without abort, the crate
# pulls in unwinding support (rust_eh_personality, etc.) that collides with
# perry-runtime's copy when Swift drives the final link.
[profile.release]
panic = "abort"

