[package]
name = "bloom-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["jolt"]
jolt = ["bloom-shared/jolt"]

[dependencies]
bloom-shared = { path = "../shared", default-features = false, features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "KeyboardEvent",
    "MouseEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "Navigator",
    "Gpu",
    "Performance",
    "GamepadEvent",
    "Gamepad",
    "GamepadButton",
    "Storage",
    "console",
] }
js-sys = "0.3"
wgpu = { version = "29", features = ["webgpu", "webgl"] }
console_error_panic_hook = "0.1"
