[package]
name = "bloom-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
# Mirror native/macos: everything defaults ON so existing web games are
# unaffected; pure-2D games opt out via Perry's per-package feature
# forwarding (see native/shared/Cargo.toml for the EN-014 rationale).
default = ["jolt", "models3d", "image-extras"]
jolt = ["bloom-shared/jolt"]
models3d = ["bloom-shared/models3d"]
image-extras = ["bloom-shared/image-extras"]

[dependencies]
bloom-shared = { path = "../shared", default-features = false, features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "KeyboardEvent",
    "MouseEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "Navigator",
    "Gpu",
    "Performance",
    "GamepadEvent",
    "Gamepad",
    "GamepadButton",
    "Storage",
    "console",
] }
js-sys = "0.3"
wgpu = { version = "29", features = ["webgpu", "webgl"] }
console_error_panic_hook = "0.1"
