[package]
name = "bloom-windows"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloom_windows"
crate-type = ["staticlib"]

[dependencies]
bloom-shared = { path = "../shared" }
raw-window-handle = "0.6"
wgpu = "24"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Input_XboxController",
] }
