[package]
name = "bloom-windows"
version = "0.1.0"
edition = "2021"

[lib]
name = "bloom_windows"
crate-type = ["staticlib"]

[features]
# Jolt defaults ON, matching the macOS/iOS targets, so `bloom/physics`
# works out of the box on Windows. The historical blocker — the
# `bloom_windows.lib` staticlib can't carry the cmake-built Jolt archives'
# search path into perry's final lld-link step — is solved at the manifest
# level: `package.json`'s `perry.nativeLibrary.targets.windows` declares a
# `libDirs` entry pointing at the stable Jolt build output
# (`native/third_party/bloom_jolt/build/windows-x86_64/lib`) plus `Jolt` /
# `bloom_jolt` in `libs`, which perry turns into `/LIBPATH:` + `*.lib` on the
# link line (perry >= 0.5.1126 manifest libDirs support). Pure-2D Windows
# games opt out via Perry feature forwarding in perry.toml:
#   [native-library."@bloomengine/engine"]
#   default-features = false
default = ["jolt", "models3d", "image-extras"]
jolt = ["bloom-shared/jolt"]
# EN-014 — see native/shared/Cargo.toml. Default-on so existing games are
# unaffected; pure-2D games opt out via Perry feature forwarding.
models3d = ["bloom-shared/models3d"]
image-extras = ["bloom-shared/image-extras"]

# Match perry-runtime's panic strategy so perry's final lld-link doesn't see
# two copies of `rust_eh_personality` (and friends) from two independent Rust
# staticlibs (perry_runtime.lib + bloom_windows.lib). Mirrors the same setting
# in native/macos/Cargo.toml.
[profile.release]
panic = "abort"
# Line tables in the staticlib objects so `perry compile --debug-symbols`
# can emit a usable PDB for crash triage (negligible runtime cost; the
# symbols stay out of the exe unless /DEBUG is requested at link).
debug = "line-tables-only"

[dependencies]
bloom-shared = { path = "../shared", default-features = false, features = ["mp3"] }
image = { version = "0.25", default-features = false, features = ["hdr"] }
raw-window-handle = "0.6"
wgpu = "29"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Input_XboxController",
] }
