[package]
name = "bloom-reference"
version = "0.1.0"
edition = "2021"
description = "Reference CPU path tracer for the Bloom renderer. Produces ground-truth images that the realtime renderer is compared against."

[[bin]]
name = "bloom-reference"
path = "src/main.rs"

[dependencies]
gltf = "1.4"
image = "0.25"
glam = "0.30"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
debug = 1
